--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -16,8 +16,8 @@
           Прайс-лист
         </a>
       </div>
-      <p class="price-info font-jost my-5 md:text-xl lg:text-lg lg:my-2">Ціни вказані за станом на 20.03.2024</p>
-      <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.10.24 очікується підвищення цін</p>
+      <p class="price-info font-jost my-5 md:text-xl lg:text-lg lg:my-2">Ціни вказані за станом на 01.11.24</p>
+      <!-- <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.11.24 очікується підвищення цін</p> -->
       <div class="block shadow-lg bg-gray-900 bg-opacity-10 rounded-2xl text-center font-jost p-1 mx-6 md:text-2xl md:mt-36 md:leading-9 lg:text-xl lg:mx-32 lg:font-medium xl:mt-8 xl:mx-60">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
