--- a/src/app/components/pages/services-pages-collection/bacterium-research/bacterium.component.html
+++ b/src/app/components/pages/services-pages-collection/bacterium-research/bacterium.component.html
@@ -11,7 +11,7 @@
     <div class="flex flex-wrap justify-between w-full">
         <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base w-full">
             <p>Прийом зразків для проведення бактеріологічних
-                досліджень - Понеділок - Четвер включно. Термін виконання 5 днів
+                досліджень - Понеділок - четвер включно. Термін виконання 5 днів.
             </p>
             <table>
                 <tbody>
@@ -22,11 +22,14 @@
                     </tr>
                     <tr>
                         <td>Бакпосів + антибіотикограма</td>
-                        <td>&bull; змив, зішкріб, рановий матеріал, ексудат - одноразова туба з
-                            транспортним середовищем;<br>
-                            &bull; сеча, секрет сперми, жовч - стерильний одноразовий транспортний контейнер
+                        <td>&bull; змив, зішкріб, рановий
+                            матеріал, ексудат, сеча, секрет
+                            сперми, жовч
+                            (збирати матеріал тільки в
+                            аплікатор з транспортною
+                            пробіркою)
                         </td>
-                        <td>500</td>
+                        <td>800</td>
                     </tr>
                 </tbody>
             </table>
