--- a/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-cats/diagnostics-panel-cats.component.html
+++ b/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-cats/diagnostics-panel-cats.component.html
@@ -27,7 +27,7 @@
                         <td>&bull; кров з ЕДТА<br>
                             &bull; зішкріб зі слизової прямої кишки
                         </td>
-                        <td>1200</td>
+                        <td>1800</td>
                     </tr>
                     <tr>
                         <td>Гіпертермія (стандарт)<br>
@@ -42,7 +42,7 @@
                             &bull; змив з кон'юнктиви<br>
                             &bull; зішкріб з носа
                         </td>
-                        <td>1600</td>
+                        <td>2400</td>
                     </tr>
                     <tr>
                         <td>Гіпертермія (максі)<br>
@@ -59,16 +59,16 @@
                             &bull; зішкріб з носа<br>
                             &bull; зішкріб зі слизової прямої кишки
                         </td>
-                        <td>2400</td>
+                        <td>3600</td>
                     </tr>
                     <tr>
                         <td>Шлунково-кишкова<br>
-                            - коронавірус<br>
-                            - панлейкопенія<br>
-                            - токсоплазмоз
+                            - криптоспоридіоз<br>
+                            - лямбліоз<br>
+                            - трихомоноз
                         </td>
                         <td>&bull; зішкріб зі слизової прямої кишки</td>
-                        <td>1200</td>
+                        <td>1800</td>
                     </tr>
                     <tr>
                         <td>Офтальмологічна (скринінг)<br>
@@ -79,7 +79,7 @@
                         <td>&bull; змив з кон'юнктиви очей<br>
                             &bull; зішкріб з носа
                         </td>
-                        <td>1200</td>
+                        <td>1800</td>
                     </tr>
                     <tr>
                         <td>Офтальмологічна (стандарт)<br>
@@ -91,7 +91,7 @@
                         <td>&bull; змив з кон'юнктиви очей<br>
                             &bull; зішкріб з носа
                         </td>
-                        <td>1600</td>
+                        <td>2400</td>
                     </tr>
                     <tr>
                         <td>Офтальмологічна (максі)<br>
@@ -105,7 +105,7 @@
                             &bull; зішкріб з носа<br>
                             &bull; кров з ЕДТА
                         </td>
-                        <td>2000</td>
+                        <td>3000</td>
                     </tr>
                     <tr>
                         <td>Респіраторна (скринінг)<br>
@@ -118,7 +118,7 @@
                             &bull; зішкріб зі слизової оболонки глотки<br>
                             &bull; зішкріб з виразок ротової порожнини
                         </td>
-                        <td>1200</td>
+                        <td>1800</td>
                     </tr>
                     <tr>
                         <td>Респіраторна (стандарт)<br>
@@ -133,7 +133,7 @@
                             &bull; зішкріб зі слизової оболонки глотки<br>
                             &bull; зішкріб з виразок ротової порожнини
                         </td>
-                        <td>2000</td>
+                        <td>3000</td>
                     </tr>
                     <tr>
                         <td>Респіраторна (максі)<br>
@@ -150,7 +150,7 @@
                             &bull; зішкріб зі слизової оболонки глотки<br>
                             &bull; зішкріб з виразок ротової порожнини
                         </td>
-                        <td>2400</td>
+                        <td>3600</td>
                     </tr>
                     <tr>
                         <td>Інфекції ротової порожнини (скринінг)<br>
@@ -161,7 +161,7 @@
                         <td>&bull; зішкріб з виразок ротової порожнини<br>
                             &bull; кров з ЕДТА
                         </td>
-                        <td>1200</td>
+                        <td>1800</td>
                     </tr>
                     <tr>
                         <td>Інфекції ротової порожнини (стандарт)<br>
@@ -173,7 +173,7 @@
                         <td>&bull; зішкріб з виразок ротової порожнини<br>
                             &bull; кров з ЕДТА
                         </td>
-                        <td>1600</td>
+                        <td>2400</td>
                     </tr>
                     <tr>
                         <td>Інфекції ротової порожнини (максі)<br>
@@ -186,7 +186,7 @@
                         <td>&bull; зішкріб з виразок ротової порожнини<br>
                             &bull; кров з ЕДТА
                         </td>
-                        <td>2000</td>
+                        <td>3000</td>
                     </tr>
                     <tr>
                         <td>репродуктивна<br>
@@ -196,7 +196,7 @@
                         </td>
                         <td>&bull; зішкріб зі слизової урогенітального тракту / піхви / прямої кишки
                         </td>
-                        <td>1200</td>
+                        <td>1800</td>
                     </tr>
                 </tbody>
             </table>
