--- a/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-dogs/diagnostics-panel-dogs.component.html
+++ b/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-dogs/diagnostics-panel-dogs.component.html
@@ -28,7 +28,18 @@
                         <td>&bull; кров з ЕДТА<br>
                             &bull; зішкріб зі слизової прямої кишки
                         </td>
-                        <td>1600</td>
+                        <td>2400</td>
+                    </tr>
+                    <tr>
+                        <td>Шлунково-кишкова 2<br>
+                            - криптоспоридіоз<br>
+                            - лямбліоз<br>
+                            - трихомоноз
+                        </td>
+                        <td>
+                            &bull; зішкріб зі слизової прямої кишки
+                        </td>
+                        <td>1800</td>
                     </tr>
                     <tr>
                         <td>Трансмісивна загальна<br>
@@ -41,14 +52,7 @@
                             ( D .repens , D .immitis )
                         </td>
                         <td>&bull; кров з ЕДТА</td>
-                        <td>2800</td>
-                    </tr>
-                    <tr>
-                        <td>Трансмісивна (переносник комарі)<br>
-                            - дирофіляріоз (D. repens, D. immitis)
-                        </td>
-                        <td>&bull; кров з ЕДТА</td>
-                        <td>800</td>
+                        <td>3600</td>
                     </tr>
                     <tr>
                         <td>Трансмісивна (переносник кліщі)<br>
@@ -59,7 +63,7 @@
                             - гепатозооноз (Hepatozoon canis)
                         </td>
                         <td>&bull; кров з ЕДТА</td>
-                        <td>2000</td>
+                        <td>3000</td>
                     </tr>
                     <tr>
                         <td>офтальмологічна<br>
@@ -71,7 +75,7 @@
                         <td>&bull; змив з кон'юнктиви очей<br>
                             &bull; зішкріб з носа
                         </td>
-                        <td>1600</td>
+                        <td>2400</td>
                     </tr>
                     <tr>
                         <td>респіраторна<br>
@@ -84,7 +88,7 @@
                             &bull; змив з носа<br>
                             &bull; зішкріб зі слизової глотки
                         </td>
-                        <td>1600</td>
+                        <td>2400</td>
                     </tr>
                     <tr>
                         <td>репродуктивна<br>
@@ -96,7 +100,7 @@
                         <td>&bull; зішкріб зі слизової урогенітального тракту / піхви<br>
                             &bull; кров з ЕДТА
                         </td>
-                        <td>1600</td>
+                        <td>2400</td>
                     </tr>
                 </tbody>
             </table>
