--- a/src/app/components/pages/services-pages-collection/marker-pages/marker-dogs/marker-dogs.component.html
+++ b/src/app/components/pages/services-pages-collection/marker-pages/marker-dogs/marker-dogs.component.html
@@ -25,7 +25,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>сCys C
@@ -34,7 +34,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>сNT-pro BNP
@@ -43,16 +43,16 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>ссTN1
-                            (серцевий Тропонін I, маркер інфаркту, міокардиту,
+                            (серцевий тропонін I, маркер інфаркту, міокардиту,
                             перикардиту та травм сердця, кількісний)
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>HbA1с
@@ -60,7 +60,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>D-dimer
@@ -68,7 +68,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>Ліпаза панкреатична
@@ -77,7 +77,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                 </tbody>
             </table>
