--- a/src/app/components/pages/services-pages-collection/marker-pages/marker-cats/marker-cats.component.html
+++ b/src/app/components/pages/services-pages-collection/marker-pages/marker-cats/marker-cats.component.html
@@ -25,7 +25,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>fCys C
@@ -34,26 +34,26 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>fNT-pro BNP
                             (N-кінцевий поліпептид натрій-диуретичного
-                            гормону) - маркер серцевої
+                            гормону - маркер серцевої
                             недостатності, кількісний)
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>fсTN1
-                            (серцевий Тропонін I, маркер інфаркту, міокардиту,
+                            (серцевий тропонін I, маркер інфаркту, міокардиту,
                             перикардиту та травм серця, кількісний)
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>HbA1f
@@ -61,7 +61,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>D-dimer
@@ -69,7 +69,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                     <tr>
                         <td>Ліпаза панкреатична
@@ -78,7 +78,7 @@
                         </td>
                         <td>&bull; сироватка крові
                         </td>
-                        <td>450</td>
+                        <td>700</td>
                     </tr>
                 </tbody>
             </table>
