--- a/src/app/components/pages/rules-pages-collection/rules-for-tests/rules.component.html
+++ b/src/app/components/pages/rules-pages-collection/rules-for-tests/rules.component.html
@@ -10,16 +10,16 @@
     </div>
     <div class="flex flex-wrap justify-between">
         <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
-            <p>При відборі проб для ПЛР-РВ досліджень необхідно дотримуватися ряду правил, які мінімізують приймати неточні результати:</p>
+            <p>Детальні рекомендації для підготовки до ПЛР-РВ досліджень:</p>
             <ol class="list-counter-circle my-3">
-                <li>дотримуватися правил асептиків і антисептиків</li>
-                <li>Уникайте потрапляння дезінфекційних засобів в пробірку</li>
-                <li>Не дозволяйте стороннім частинкам потрапити в зразок (шерсть, бруд, вата)</li>
-                <li>Використовуйте рукавички без тальку при відборі проб</li>
-                <li>використовувати одноразові стерильні витратні матеріали, рекомендовані лабораторією для збору, зберігання та транспортування</li>
-                <li>підбір матеріалу для проведення відповідно до клінічної картини, особливостей захворювання, врахування шляху збудника</li>
-                <li>Пройміть аналіз перед початком прийому ліків або виключіть застосування місцевих препаратів за кілька днів до дослідження (кількість часу залежить від ліків). Якщо тварина була на антибіотикотерапії, розрив з відбором проб становить 10-14 днів</li>
-                <li>Розглянемо терміни останньої вакцинації (розрив становить не менше 21 дня)</li>
+                <li>Дотримуватися правил асептиків і антисептиків.</li>
+                <li>Уникайте потрапляння дезінфекційних засобів в пробірку.</li>
+                <li>Не дозволяйте стороннім частинкам потрапити в пробірку (вовна, бруд, вата).</li>
+                <li>Використовуйте одноразові рукавички без тальку для збору проб, щоб уникнути забруднення.</li>
+                <li>Оберіть стерильні витратні матеріали для забору, зберігання та транспортування проб, які рекомендовані лабораторією.</li>
+                <li>Підбіріть матеріал  відповідно до клінічної картини, особливостей захворювання, врахування шляху збудника.</li>
+                <li>Припиніть використання антибіотиків за 10-14 днів до забору проб, щоб не вплинути на виявлення патогенних мікроорганізмів.</li>
+                <li>Після вакцинації повинен пройти термін не менше 21 дня для уникнення помилкових результатів, пов'язаних з вакцинним стимулом.</li>
             </ol>
         </div>
     </div>
