--- a/src/app/components/pages/services-pages-collection/info/info.component.html
+++ b/src/app/components/pages/services-pages-collection/info/info.component.html
@@ -41,23 +41,23 @@
                     </tr>
                     <tr>
                         <td>Виявлення продуктів посилення</td>
-                        <td>Після реакції:<br>
-                            Електрофорез<br>
-                            &ndash; виявлення флуоресценції
+                        <td>&ndash; Після реакції<br>
+                            &ndash; Електрофорез<br>
+                            &ndash; Виявлення флуоресценції
                         </td>
-                        <td>Після кожного циклу.<br>
-                            Стадія виявлення поєднується зі стадією посилення.
+                        <td>&ndash; Після кожного циклу.<br>
+                            &ndash; Стадія виявлення поєднується зі стадією посилення.
                         </td>
                     </tr>
                     <tr>
                         <td>Реєстрація та інтерпретація результатів</td>
-                        <td>суб&rsquo;єктивна оцінка результатів</td>
+                        <td>Суб&rsquo;єктивна оцінка результатів</td>
                         <td>Автоматичне</td>
                     </tr>
                     <tr>
                         <td>Можливість одночасного дослідження декількох захворювань</td>
-                        <td>можливо, але обмежено</td>
-                        <td>Це можливо</td>
+                        <td>Можливо, але обмежено</td>
+                        <td>Можливо</td>
                     </tr>
                     <tr>
                         <td>Проблеми, які потрібно вирішити:
