--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,6 +13,10 @@
                 <div class="muzzle">
                     <div class="nose"></div>
                 </div>
+                <div class="mustache">
+                    <div class="mustache-top"></div>
+                    <div class="mustache-bottom"></div>
+                </div>
             </div>
             <div class="body">
                 <div class="paw"></div>
