--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -25,6 +25,7 @@ footer {
 .ears,
 .eyes,
 .muzzle,
+.mustache,
 .body,
 .paw,
 .tail,
@@ -49,15 +50,12 @@ footer {
 
 .cat {
     margin-top: 1.5625rem;
-    /* 50px / 2 / 16 */
     animation: purr 5s infinite cubic-bezier(0, .75, 1, .25);
 }
 
 .head {
     width: 3.125rem;
-    /* 100px / 2 / 16 */
     height: 2.8125rem;
-    /* 90px / 2 / 16 */
     border-radius: 50%;
     z-index: 100;
     animation: head-bob 5s infinite ease-in-out;
@@ -65,7 +63,6 @@ footer {
 
 .ears {
     top: -0.625rem;
-    /* 20px / 2 / 16 */
     z-index: -100;
 }
 
@@ -73,32 +70,26 @@ footer {
     width: 0;
     height: 0;
     border-left: 0.78125rem solid transparent;
-    /* 25px / 2 / 16 */
     border-right: 0.78125rem solid transparent;
     border-bottom: 1.5625rem solid #000000;
-    /* 50px / 2 / 16 */
 }
 
 .ear.left {
     transform: rotate(-20deg) translateX(-0.3125rem);
-    /* 10px / 2 / 16 */
 }
 
 .ear.right {
     transform: rotate(20deg) translateX(0.3125rem);
-    /* 10px / 2 / 16 */
 }
 
 .eyes {
     top: -0.5625rem;
-    /* 18px / 2 / 16 */
     width: 50%;
 }
 
 .eye {
     width: 0.5rem;
-    /* 16px / 2 / 16 */
-    height: 0.5rem;
+    height: 0.4rem;
     border-radius: 50%;
     background-color: #ffeb7b;
     animation: eye-blink 5s infinite;
@@ -107,8 +98,28 @@ footer {
 
 .muzzle {
     top: 1.6rem;
-    /* 50px / 2 / 16 */
 }
+
+.mustache {
+    top: 1.7rem;
+}
+
+.mustache-top {
+    width: 1.8rem;
+    height: 0.1rem;
+    background-color: #ffffff;
+    text-align:start;
+}
+
+.mustache-bottom {
+    width: 1.6rem;
+    height: 0.4rem;
+    border-radius: 170px 170px 0 0;
+    border-top: 1px solid rgb(168, 168, 168);
+    border-left: 1px solid rgb(255, 255, 255);
+    border-right: 1px solid rgb(255, 255, 255);
+}
+
 
 
 .nose::before {
@@ -120,65 +131,46 @@ footer {
     width: 10px;
     height: 5px;
     background-color: #CC6666;
-    /* Same color as the nose */
+    z-index: 10;
     border-radius: 50%;
-    /* Rounded bottom */
 }
 
 .body {
     width: 6.25rem;
-    /* 200px / 2 / 16 */
     height: 3.75rem;
-    /* 120px / 2 / 16 */
     border-top-left-radius: 12.5rem;
-    /* 200px / 2 / 16 */
     border-top-right-radius: 12.5rem;
     top: -2.34375rem;
-    /* 75px / 2 / 16 */
     left: 2.8125rem;
-    /* 90px / 2 / 16 */
     z-index: -10;
 }
 
 .paw {
     height: 0.9375rem;
-    /* 30px / 2 / 16 */
     width: 1.5625rem;
-    /* 50px / 2 / 16 */
     border-radius: 1.5625rem;
-    /* 25px / 2 / 16 */
     left: -3.125rem;
-    /* 100px / 2 / 16 */
     top: 2.8125rem;
-    /* 90px / 2 / 16 */
 }
 
 .tail {
     left: 5.625rem;
-    /* 180px / 2 / 16 */
     top: -3.125rem;
-    /* 100px / 2 / 16 */
     transform: rotate(90deg);
 }
 
 .tail-segment {
     height: 0.625rem;
-    /* 20px / 2 / 16 */
     width: 0.625rem;
     border-radius: 1.5625rem;
-    /* 25px / 2 / 16 */
     top: 0;
     left: 0.3125rem;
-    /* 10px / 2 / 16 */
     animation: tail-swish 5s infinite cubic-bezier(.8, 0, .2, 1);
     background-color: black;
-    /* Set the default color to black */
 }
 
-/* Set the last tail segment to white using the specific class */
 .tail-segment.last-segment {
     background-color: rgb(151, 151, 151);
-    /* Change last segment to white */
 }
 
 
