--- a/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
+++ b/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
@@ -15,16 +15,16 @@
             <p>Перш ніж збирати матеріал, переконайтеся, що:</p>
             <ol class="list-counter-circle">
                 <li>З моменту останнього щеплення пройшло більше 21 дня.</li>
-                <li>перерва між прийомом антибіотиків і відбором проб становить не менше 10-14 днів.</li>
+                <li>Перерва між прийомом антибіотиків і відбором проб становить не менше 10-14 днів.</li>
             </ol>
             <p class="my-3"><strong>Забір крові:</strong></p>
             <ol class="list-counter-circle">
-                <li>рекомендується проводити натщесерце.</li>
+                <li>рекомендується проводити натщесерце (останній прийом їжі повинен бути не пізніше ніж за 8-12 годин до забору крові)</li>
                 <li>Пропустіть аналіз, щоб призначити перед початком лікування або не раніше, ніж через 10 &ndash; 14
                     днів після його завершення. В особливих випадках розглянемо час повного виведення препарату з
                     організму.</li>
                 <li>Відбір проб перед інфузійною терапією.</li>
-                <li>антикоагулянтна терапія повинна підтримуватися принаймні 24 години з останнього разу, коли ви востаннє використовували препарати для зменшення тромбозу.</li>
+                <li>Антикоагулянтна терапія повинна підтримуватися принаймні 24 години з останнього разу, коли ви востаннє використовували препарати для зменшення тромбозу.</li>
             </ol>
             <p class="my-3"><strong>Отримання змивів від кон&rsquo;юнктиви:</strong></p>
             <ol class="list-counter-circle">
@@ -37,7 +37,7 @@
             </ol>
             <p class="my-3"><strong>Отримання ротоглоткових зіскрібків, змивів:</strong></p>
             <ol class="list-counter-circle">
-                <li>Підбір матеріалу не раніше, ніж через 2-4 години після трапези.</li>
+                <li>Очікуйте 2-4 години після останнього прийому їжі або води перед взяттям матеріалу.</li>
                 <li>Відбір аналізу перед початком прийому ліків або виключіть застосування місцевих препаратів за кілька днів до дослідження (кількість часу залежить від ліків).</li>
             </ol>
             <p class="my-3"><strong>Відбір проб калу або зішкріб з прямої кишки:</strong></p>
@@ -65,20 +65,11 @@
                 <li>особливих вказівок по підготовці до відбору немає.</li>
             </ol>
             <p class="my-3"><strong>Підготовка тварини до біохімічних досліджень, гормональних тестів:</strong></p>
-            <p>Перед взяттям крові необхідно виключити:</p>
             <ol class="list-counter-circle">
-                <li>Фізичну активність.</li>
+                <li>Утримуйтеся від годування тварини перед забором крові для уникнення ліпемії.</li>
+                <li>Перед взяттям крові необхідно виключити фізичну активність.</li>
                 <li>Не рекомендується здавати кров відразу після рентгенів, УЗД, фізіотерапевтичних процедур.</li>
             </ol>
-            <p class="my-3"><strong>Забір крові:</strong></p>
-            <ol class="list-counter-circle">
-                <li>Утримуйтеся натщесерце.</li>
-                <li>Кров забирають до введення препаратів і інфузійної терапії.</li>
-                <li>Виведення крові шприцом або перенесення крові зі шприца в пробірку неприпустимо, так як призводить до сильного гемолізу.</li>
-                <li>При відборі проб на кортизол тварина повинна бути спокійною.</li>
-
-            </ol>
-            <p class="my-3">Ці правила підготовки тварини до аналізів допоможуть забезпечити отримання точних та надійних результатів досліджень.</p>
         </div>
     </div>
 </div>
