--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -18,6 +18,9 @@
       </div>
       <p class="price-info font-jost my-5 md:text-xl lg:text-lg lg:my-2">Ціни вказані за станом на 01.11.24</p>
       <!-- <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.11.24 очікується підвищення цін</p> -->
+      <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що 31 грудня, а також 1 та 2 січня наша лабораторія не працюватиме. </p>
+      <!-- <p class="font-jost  md:text-xl lg:text-lg lg:my-1">З наступаючими святами! Бажаємо Вам здоров'я та благополуччя в новому році!</p>
+      <p class="font-jost md:text-xl lg:text-lg lg:my-1">З повагою, Green Lab</p> -->
       <div class="block shadow-lg bg-gray-900 bg-opacity-10 rounded-2xl text-center font-jost p-1 mx-6 md:text-2xl md:mt-36 md:leading-9 lg:text-xl lg:mx-32 lg:font-medium xl:mt-8 xl:mx-60">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
