--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,58 +1,5 @@
 <footer class=" bg-gray-900">
-    <div id="box" class="hidden 2xl:block">
-        <div class="cat">
-            <div class="head">
-                <div class="ears">
-                    <div class="ear left"></div>
-                    <div class="ear right"></div>
-                </div>
-                <div class="eyes">
-                    <div class="eye left"></div>
-                    <div class="eye right"></div>
-                </div>
-                <div class="muzzle">
-                    <div class="nose"></div>
-                </div>
-                <div class="mustache">
-                    <div class="mustache-top"></div>
-                    <div class="mustache-bottom"></div>
-                </div>
-            </div>
-            <div class="body">
-                <div class="paw"></div>
-            </div>
-            <div class="tail">
-                <div class="tail-segment">
-                    <div class="tail-segment">
-                        <div class="tail-segment">
-                            <div class="tail-segment">
-                                <div class="tail-segment">
-                                    <div class="tail-segment">
-                                        <div class="tail-segment">
-                                            <div class="tail-segment">
-                                                <div class="tail-segment">
-                                                    <div class="tail-segment">
-                                                        <div class="tail-segment">
-                                                            <div class="tail-segment">
-                                                                <div class="tail-segment">
-                                                                    <div class="tail-segment last-segment">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <cat-animation></cat-animation>
     <div class="flex flex-col mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8 xl:py-3">
         <div class="md:flex md:justify-between md:items-center lg:mb-5">
             <div class="mb-6 md:mb-0">
@@ -79,7 +26,7 @@
         </div>
         <hr class="mt-4 lg:my-0" />
         <div class="sm:flex sm:items-center sm:justify-between md:mt-3">
-            <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2024 GreenLab. Всі права захищені.
+            <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2025 GreenLab. Всі права захищені.
             </span>
         </div>
     </div>
