--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -15,7 +15,7 @@
             <p class="my-6">Так що стандартом при виборі антикоагулянтів для лабораторних досліджень є ЕДТА, що запобігає згортання крові в зразку. Використання транспортного ПЛР-середовища дозволяє надійно зберегти відібрані вами змиви і подряпини. Якщо вам потрібно отримати цілу (стабілізовану кров) &ndash; використовуйте пробірки з ЕДТА, а при необхідності сироватки &ndash; пробірки зі згортанням активаторів (відповідне маркування знаходиться на пробірці)</p>
             <p class="my-6">Використовуйте урогенітальний зонд для збору матеріалу з різних слизових оболонок.</p>
             <p class="my-6">Будьте обережні при виборі витратних матеріалів, так як неправильно відібрані і збережені зразки не приймаються до досліджень.</p>
-            <p class="my-6"><span class="text-dark-red">Будь-ласка, відправляйте аналізи лише витратними матеріалами які наведені нижче. Баночки та шприци не відправляйте.</span></p>
+            <p class="my-6"><span class="text-dark-red">Будь ласка, відправляйте аналізи лише витратними матеріалами які наведені нижче. Баночки та шприци не відправляйте.</span></p>
             <p class="my-6">По всім питанням звертайтесь за номерами які вказані на сторінці  <a routerLink="/contact" class="text-blue">Контакти</a>.</p>
 
             <table class="w-full -collapse">
@@ -66,7 +66,7 @@
                         </td>
                         <td class="px-4 py-2  "> 
                             <img src="../../../../../assets/images/containers/aplicator.png" class="w-60 mx-auto lg:w-1/2" alt="aplicator">
-                            <p class="text-center">Аплікатор з транспортної пробіркою</p>
+                            <p class="text-center">Аплікатор з транспортною пробіркою</p>
                         </td>
                     </tr>
                     <tr>
