--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,7 @@
             </div>
             <app-burger-menu></app-burger-menu>
             <a routerLink="/" class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Головна</a>
+            <a routerLink="/" class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Новини</a>
             <div 
                 class="relative group" 
                 (mouseenter)="openDropdown('rules')"
