--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -46,7 +46,7 @@
             </a>
             <p><span class="bg-yellow-200 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Скоро в наявності</span></p>
             <p class="mb-3 text-gray-700">Цистоізоспороз – це паразитарне захворювання, що викликається найпростішими – одноклітинними організмами, що належать до роду Cystoisospora.</p>
-            <a routerLink="/news-page" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-sky focus:outline-none focus:ring-blue-300">
+            <a routerLink="/news-page" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-sky focus:outline-none focus:ring-blue-300 transition delay-50 duration-300">
                 Читати більше
                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
