--- a/src/app/components/pages/news-item/news-item.component.html
+++ b/src/app/components/pages/news-item/news-item.component.html
@@ -16,7 +16,7 @@
                 <li>Зневоднення, що може загрожувати життю</li>
             </ol>
             <p>У дорослих тварин захворювання часто проходить безсимптомно, але вони можуть бути носіями.</p>
-            <p>Для підтвердження діагнозу використовують:</p>
+            <p class="font-semibold">Для підтвердження діагнозу використовують:</p>
             <ul>
                 <li>🔬 Мікроскопічне дослідження калу – метод флотації (з використанням цукрового або сольового розчину) дозволяє виявити ооцисти Cystoisospora.</li>
                 <li>🧬 ПЛР (полімеразна ланцюгова реакція) – високочутливий метод для точної ідентифікації збудника.</li>
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
+<!-- <div class="container font-nunito text-lg sm:px-6 xl:px-80">
     <div class="flex flex-wrap justify-center xl:mb-10">
       <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
         {{ post?.title }}
@@ -48,7 +48,6 @@
       <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
         <p><b>{{ post?.title }}</b> – {{ post?.content }}</p>
         <p class="font-semibold">Теги: {{ post?.tag }}</p>
-        <!-- Добавьте остальной контент по аналогии -->
       </div>
     </div>
-  </div>
+  </div> -->
