--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,15 @@
 <header class="navbar bg-white relative">
     <div class="md:container">
-        <nav class="mx-auto flex max-w-7xl items-center lg:space-x-3 space-x-10 justify-between p-2 lg:p-0 xl:px-8 xl:max-w-screen-xl" aria-label="Global">
+        <nav class="mx-auto flex items-center space-x-12 justify-between p-2 lg:space-x-3 lg:p-0 xl:px-2 xl:max-w-screen-lg" aria-label="Global">
             <div class="flex ">
                 <a routerLink="/" class="header-image flex flex-col lg:flex-row items-center">
-                    <img class="h-8 w-auto md:h-14 xl:h-10" src="../../../assets/images/logo.png" alt="logo">
-                    <div class="text-slate-950 font-montserrat_alternates font-bold text-xs xl:text-sm lg:ml-2">Green PCR Lab</div>
+                    <img class="h-8 w-auto" src="../../../assets/images/logo.png" alt="logo">
+                    <div class="text-slate-950 font-raleway font-bold text-xs xl:text-sm lg:ml-2">Green PCR Lab</div>
                 </a>
             </div>
             <app-burger-menu></app-burger-menu>
             <a routerLink="/" class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Головна</a>
-            <a routerLink="/" class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Новини</a>
+            <!-- <a routerLink="/" class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Новини</a> -->
             <div 
                 class="relative group" 
                 (mouseenter)="openDropdown('rules')"
