--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 nav a {
-    font-size: 15px;
+    font-size: 0.8rem;
 }
 
 header {
@@ -31,7 +31,7 @@ header {
         display: inline-flex;
         align-items: center; /* Центрируем ссылки по вертикали */
         justify-content: center;
-        padding: 30px 15px; /* Отступы вокруг ссылок */
+        padding: 1.2rem 0.8rem;
         text-decoration: none; /* Убираем стандартное подчеркивание */
         height: 100%; /* Ссылка занимает всю высоту nav */
     }
